# O-zone

./: .gitignore  README.txt  docker-compose.yml  readme.txt  requirements.txt
src/: Dockerfile  pyproject.toml  requirements.txt
src/jobs/: airPollution_kafka_consumer.py  airPollution_kafka_producer.py  airPollution_postgre_sink.py  test.py
src/modules/: YamlReader.py  class_BigQuery.py
